fixed linebreaks in car details

--- a/src/components/CarDetails/car-details.css
+++ b/src/components/CarDetails/car-details.css
@@ -10,3 +10,7 @@
     flex-direction: column;
     gap: 1rem;
 }
+
+.with-line-breaks {
+    white-space: pre-line;
+}
